// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copied from chat instant withdraw 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "丧 丧 熊",
        "title": undefined,
      },
      "time": "9:59:54 PM",
    },
    Object {
      "content": Array [
        "2",
        "3",
      ],
      "player": Object {
        "name": "Paul~K（写不完了...）",
        "title": undefined,
      },
      "time": "10:00:04 PM",
    },
  ],
}
`;

exports[`copied from chat without title 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "丧 丧 熊",
        "title": undefined,
      },
      "time": "9:59:54 PM",
    },
    Object {
      "content": Array [
        "2",
        "3",
      ],
      "player": Object {
        "name": "Paul~K（写不完了...）",
        "title": undefined,
      },
      "time": "10:00:04 PM",
    },
  ],
}
`;

exports[`copied from message manager basic 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "“——1。",
      ],
      "player": Object {
        "name": "织练取",
        "number": "958884",
        "title": "1",
      },
      "time": "3:13:28 AM",
    },
    Object {
      "content": Array [
        "“我2”",
        "\\"门3\\"",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": "2",
      },
      "time": "3:14:30 AM",
    },
    Object {
      "content": Array [
        "嫌疑",
        "是出",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": "2",
      },
      "time": "3:16:49 AM",
    },
  ],
}
`;

exports[`copied from message manager system messages 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "暗夜桑的h检定，那么结果是:D100=13/25 成功",
      ],
      "player": Object {
        "name": "骰娘",
        "number": "87200",
        "title": undefined,
      },
      "time": "4:11:31 PM",
    },
    Object {
      "content": Array [
        ".r4h",
      ],
      "player": Object {
        "name": "DK",
        "number": "2808",
        "title": undefined,
      },
      "time": "12:11:41 AM",
    },
  ],
}
`;

exports[`copied from message manager without title 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "“——1。",
      ],
      "player": Object {
        "name": "织练取",
        "number": "958884",
        "title": undefined,
      },
      "time": "3:13:28 AM",
    },
    Object {
      "content": Array [
        "“我2”",
        "\\"门3\\"",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": undefined,
      },
      "time": "3:14:30 AM",
    },
    Object {
      "content": Array [
        "嫌疑",
        "是出",
      ],
      "player": Object {
        "name": "白菜",
        "number": "indo@qq.com",
        "title": undefined,
      },
      "time": "3:16:49 AM",
    },
  ],
}
`;

exports[`copied from mobile basic 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "德里奇化石",
      },
      "time": "23:50:12",
    },
    Object {
      "content": Array [
        "2",
      ],
      "player": Object {
        "name": "a dark ideation",
      },
      "time": "23:50:40",
    },
    Object {
      "content": Array [
        "诶？",
      ],
      "player": Object {
        "name": "一零绵羊咩咩咩",
      },
      "time": "23:50:48",
    },
  ],
}
`;

exports[`copied from mobile filter dates 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "德里奇化石",
      },
      "time": "23:50:12",
    },
    Object {
      "content": Array [
        "2",
      ],
      "player": Object {
        "name": "a dark ideation",
      },
      "time": "23:50:40",
    },
  ],
}
`;

exports[`exported from log basic 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "骰娘-Roll100",
        "number": "87200175",
      },
      "time": "2019-09-23 8:43:38 PM",
    },
    Object {
      "content": Array [
        ".r test",
      ],
      "player": Object {
        "name": "暗夜",
        "number": "28084825",
      },
      "time": "2019-09-23 9:02:42 PM",
    },
    Object {
      "content": Array [
        "4",
      ],
      "player": Object {
        "name": "岁寒",
        "number": "36226407",
      },
      "time": "2019-09-23 11:26:00 PM",
    },
    Object {
      "content": Array [
        "5",
      ],
      "player": Object {
        "name": "黄山真君",
        "number": "106505723",
      },
      "time": "2019-09-24 7:54:29 AM",
    },
    Object {
      "content": Array [
        "6",
      ],
      "player": Object {
        "name": "黄山真君",
        "number": "106505723",
      },
      "time": "2019-09-24 9:16:35 AM",
    },
  ],
}
`;

exports[`exported from log email 1`] = `
Object {
  "logLines": Array [
    Object {
      "content": Array [
        "1",
      ],
      "player": Object {
        "name": "礼",
        "number": "852649",
      },
      "time": "2020-03-04 12:12:29 AM",
    },
    Object {
      "content": Array [
        "2",
      ],
      "player": Object {
        "name": "kp",
        "number": "100550",
      },
      "time": "2020-03-04 12:12:39 AM",
    },
    Object {
      "content": Array [
        "3",
      ],
      "player": Object {
        "name": "围观",
        "number": "indo@qq.com",
      },
      "time": "2020-03-04 12:13:41 AM",
    },
  ],
}
`;
